# ipc-mechanism-getrandom-benchmarks

benchmark-results/: dbus.txt  dbus_large.txt  grpc.txt  grpc_large.txt  socket.txt  socket_large.txt  visualize.py
dbus-benchmark/: .gitignore  benchmark-large.sh  benchmark.sh  out.txt  results.bkp.txt  results_large.txt
grpc-benchmark/: .gitignore  CMakeLists.txt  benchmark-large.sh  benchmark.sh  build_randombytes.sh  out.txt  randombytes.proto  randombytes_client.cc  randombytes_server.cc  readme.txt  results.bkp.txt
grpc-benchmark/archive/: install_grpc.sh
socket-benchmark/: .gitignore  CMakeLists.txt  README.md  benchmark-large.sh  benchmark.sh  out.txt  socket_client.cc  socket_server.cc
